--- a/Values in Ronsenbrock.ipynb
+++ b/Values in Ronsenbrock.ipynb
@@ -103,6 +103,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b5018e7f-1346-4f4e-8961-f1613e2d2721",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.27626589]), array([-1.85462808]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.RandomState(17)\n",
+    "b = rng.normal(scale=1, size=(num_blocks))\n",
+    "q = rng.normal(scale=1, size=(num_blocks))\n",
+    "b, q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "717358ec-fa7a-4156-9efe-0c1fe2d3bde1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\"p\":p_test[0], \"a\":a_test[0]}\n",
+    "model.set_param_val(params)\n",
+    "solvals, objval = model.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f9d936f7-70c5-4fab-afc4-de646ebb5234",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': {0: -1.9926868120184897, 1: 4.0}}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solvals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "05a0509d-cc6a-4a1c-9c64-b11cf5d5e0d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.89757056905451"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objval"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d037fe94-d6cd-4b74-b14b-db34fb3d9538",
    "metadata": {},
