Add round for STE

--- a/test/quadratic/Test Quadratic 20-20.ipynb
+++ b/test/quadratic/Test Quadratic 20-20.ipynb
@@ -1153,9 +1153,338 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8e2644c-7d4c-4740-95d7-5a949196d839",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9f6e4dc3-0f5f-4704-a4a8-ac2f4b57c1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f638487e-6874-4c2a-a7c1-de8104d27970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b5e5f4ff-dd89-4396-a239-9457cf839cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f2f4f154-a5f1-4431-b6c7-42a32989d3dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 492.62\n",
+      "Epoch 1, Validation Loss: 9.50\n",
+      "Epoch 2, Validation Loss: 1.60\n",
+      "Epoch 3, Validation Loss: 0.75\n",
+      "Epoch 4, Validation Loss: 0.07\n",
+      "Epoch 5, Validation Loss: -0.63\n",
+      "Epoch 6, Validation Loss: -1.35\n",
+      "Epoch 7, Validation Loss: -2.32\n",
+      "Epoch 8, Validation Loss: -2.64\n",
+      "Epoch 9, Validation Loss: -2.77\n",
+      "Epoch 10, Validation Loss: -2.75\n",
+      "Epoch 11, Validation Loss: -2.86\n",
+      "Epoch 12, Validation Loss: -2.91\n",
+      "Epoch 13, Validation Loss: -2.93\n",
+      "Epoch 14, Validation Loss: -3.02\n",
+      "Epoch 15, Validation Loss: -2.91\n",
+      "Epoch 16, Validation Loss: -3.03\n",
+      "Epoch 17, Validation Loss: -2.80\n",
+      "Epoch 18, Validation Loss: -2.96\n",
+      "Epoch 19, Validation Loss: -3.00\n",
+      "Epoch 20, Validation Loss: -2.90\n",
+      "Epoch 21, Validation Loss: -2.84\n",
+      "Epoch 22, Validation Loss: -2.96\n",
+      "Epoch 23, Validation Loss: -3.00\n",
+      "Epoch 24, Validation Loss: -2.85\n",
+      "Epoch 25, Validation Loss: -3.02\n",
+      "Epoch 26, Validation Loss: -2.96\n",
+      "Epoch 27, Validation Loss: -3.06\n",
+      "Epoch 28, Validation Loss: -3.01\n",
+      "Epoch 29, Validation Loss: -3.05\n",
+      "Epoch 30, Validation Loss: -3.06\n",
+      "Epoch 31, Validation Loss: -3.00\n",
+      "Epoch 32, Validation Loss: -2.96\n",
+      "Epoch 33, Validation Loss: -2.96\n",
+      "Epoch 34, Validation Loss: -3.09\n",
+      "Epoch 35, Validation Loss: -2.84\n",
+      "Epoch 36, Validation Loss: -3.10\n",
+      "Epoch 37, Validation Loss: -2.75\n",
+      "Epoch 38, Validation Loss: -2.94\n",
+      "Epoch 39, Validation Loss: -3.00\n",
+      "Epoch 40, Validation Loss: -3.12\n",
+      "Epoch 41, Validation Loss: -2.87\n",
+      "Epoch 42, Validation Loss: -2.99\n",
+      "Epoch 43, Validation Loss: -2.95\n",
+      "Epoch 44, Validation Loss: -3.10\n",
+      "Epoch 45, Validation Loss: -2.91\n",
+      "Epoch 46, Validation Loss: -2.95\n",
+      "Epoch 47, Validation Loss: -3.01\n",
+      "Epoch 48, Validation Loss: -2.90\n",
+      "Epoch 49, Validation Loss: -2.97\n",
+      "Epoch 50, Validation Loss: -3.11\n",
+      "Epoch 51, Validation Loss: -3.01\n",
+      "Epoch 52, Validation Loss: -3.06\n",
+      "Epoch 53, Validation Loss: -3.14\n",
+      "Epoch 54, Validation Loss: -3.10\n",
+      "Epoch 55, Validation Loss: -3.05\n",
+      "Epoch 56, Validation Loss: -2.77\n",
+      "Epoch 57, Validation Loss: -3.01\n",
+      "Epoch 58, Validation Loss: -3.07\n",
+      "Epoch 59, Validation Loss: -3.06\n",
+      "Epoch 60, Validation Loss: -3.13\n",
+      "Epoch 61, Validation Loss: -3.12\n",
+      "Epoch 62, Validation Loss: -3.04\n",
+      "Epoch 63, Validation Loss: -3.14\n",
+      "Epoch 64, Validation Loss: -3.00\n",
+      "Epoch 65, Validation Loss: -2.99\n",
+      "Epoch 66, Validation Loss: -3.18\n",
+      "Epoch 67, Validation Loss: -3.02\n",
+      "Epoch 68, Validation Loss: -3.13\n",
+      "Epoch 69, Validation Loss: -3.01\n",
+      "Epoch 70, Validation Loss: -3.04\n",
+      "Epoch 71, Validation Loss: -3.03\n",
+      "Epoch 72, Validation Loss: -3.19\n",
+      "Epoch 73, Validation Loss: -3.06\n",
+      "Epoch 74, Validation Loss: -2.92\n",
+      "Epoch 75, Validation Loss: -3.09\n",
+      "Epoch 76, Validation Loss: -3.25\n",
+      "Epoch 77, Validation Loss: -3.05\n",
+      "Epoch 78, Validation Loss: -3.14\n",
+      "Epoch 79, Validation Loss: -3.18\n",
+      "Epoch 80, Validation Loss: -3.12\n",
+      "Epoch 81, Validation Loss: -3.15\n",
+      "Epoch 82, Validation Loss: -3.26\n",
+      "Epoch 83, Validation Loss: -3.08\n",
+      "Epoch 84, Validation Loss: -3.15\n",
+      "Epoch 85, Validation Loss: -3.19\n",
+      "Epoch 86, Validation Loss: -3.14\n",
+      "Epoch 87, Validation Loss: -3.21\n",
+      "Epoch 88, Validation Loss: -3.12\n",
+      "Epoch 89, Validation Loss: -3.16\n",
+      "Epoch 90, Validation Loss: -3.15\n",
+      "Epoch 91, Validation Loss: -3.31\n",
+      "Epoch 92, Validation Loss: -3.13\n",
+      "Epoch 93, Validation Loss: -3.08\n",
+      "Epoch 94, Validation Loss: -3.23\n",
+      "Epoch 95, Validation Loss: -3.18\n",
+      "Epoch 96, Validation Loss: -3.32\n",
+      "Epoch 97, Validation Loss: -3.22\n",
+      "Epoch 98, Validation Loss: -3.20\n",
+      "Epoch 99, Validation Loss: -3.21\n",
+      "Epoch 100, Validation Loss: -3.23\n",
+      "Epoch 101, Validation Loss: -3.20\n",
+      "Epoch 102, Validation Loss: -3.20\n",
+      "Epoch 103, Validation Loss: -3.26\n",
+      "Epoch 104, Validation Loss: -3.12\n",
+      "Epoch 105, Validation Loss: -3.28\n",
+      "Epoch 106, Validation Loss: -3.34\n",
+      "Epoch 107, Validation Loss: -3.25\n",
+      "Epoch 108, Validation Loss: -3.35\n",
+      "Epoch 109, Validation Loss: -3.41\n",
+      "Epoch 110, Validation Loss: -3.19\n",
+      "Epoch 111, Validation Loss: -3.41\n",
+      "Epoch 112, Validation Loss: -3.32\n",
+      "Epoch 113, Validation Loss: -3.37\n",
+      "Epoch 114, Validation Loss: -3.27\n",
+      "Epoch 115, Validation Loss: -3.28\n",
+      "Epoch 116, Validation Loss: -3.30\n",
+      "Epoch 117, Validation Loss: -3.39\n",
+      "Epoch 118, Validation Loss: -3.32\n",
+      "Epoch 119, Validation Loss: -3.33\n",
+      "Epoch 120, Validation Loss: -3.34\n",
+      "Epoch 121, Validation Loss: -3.36\n",
+      "Epoch 122, Validation Loss: -3.37\n",
+      "Epoch 123, Validation Loss: -3.41\n",
+      "Epoch 124, Validation Loss: -3.39\n",
+      "Epoch 125, Validation Loss: -3.38\n",
+      "Epoch 126, Validation Loss: -3.40\n",
+      "Epoch 127, Validation Loss: -3.41\n",
+      "Epoch 128, Validation Loss: -3.37\n",
+      "Epoch 129, Validation Loss: -3.42\n",
+      "Epoch 130, Validation Loss: -3.43\n",
+      "Epoch 131, Validation Loss: -3.37\n",
+      "Epoch 132, Validation Loss: -3.42\n",
+      "Epoch 133, Validation Loss: -3.39\n",
+      "Epoch 134, Validation Loss: -3.33\n",
+      "Epoch 135, Validation Loss: -3.32\n",
+      "Epoch 136, Validation Loss: -3.36\n",
+      "Epoch 137, Validation Loss: -3.41\n",
+      "Epoch 138, Validation Loss: -3.29\n",
+      "Epoch 139, Validation Loss: -3.39\n",
+      "Epoch 140, Validation Loss: -3.31\n",
+      "Epoch 141, Validation Loss: -3.37\n",
+      "Epoch 142, Validation Loss: -3.42\n",
+      "Epoch 143, Validation Loss: -3.32\n",
+      "Epoch 144, Validation Loss: -3.36\n",
+      "Epoch 145, Validation Loss: -3.44\n",
+      "Epoch 146, Validation Loss: -3.37\n",
+      "Epoch 147, Validation Loss: -3.44\n",
+      "Epoch 148, Validation Loss: -3.26\n",
+      "Epoch 149, Validation Loss: -3.32\n",
+      "Epoch 150, Validation Loss: -3.40\n",
+      "Epoch 151, Validation Loss: -3.36\n",
+      "Epoch 152, Validation Loss: -3.33\n",
+      "Epoch 153, Validation Loss: -3.45\n",
+      "Epoch 154, Validation Loss: -3.42\n",
+      "Epoch 155, Validation Loss: -3.37\n",
+      "Epoch 156, Validation Loss: -3.35\n",
+      "Epoch 157, Validation Loss: -3.47\n",
+      "Epoch 158, Validation Loss: -3.41\n",
+      "Epoch 159, Validation Loss: -3.40\n",
+      "Epoch 160, Validation Loss: -3.46\n",
+      "Epoch 161, Validation Loss: -3.33\n",
+      "Epoch 162, Validation Loss: -3.42\n",
+      "Epoch 163, Validation Loss: -3.42\n",
+      "Epoch 164, Validation Loss: -3.35\n",
+      "Epoch 165, Validation Loss: -3.41\n",
+      "Epoch 166, Validation Loss: -3.45\n",
+      "Epoch 167, Validation Loss: -3.47\n",
+      "Epoch 168, Validation Loss: -3.46\n",
+      "Epoch 169, Validation Loss: -3.35\n",
+      "Epoch 170, Validation Loss: -3.20\n",
+      "Epoch 171, Validation Loss: -3.37\n",
+      "Epoch 172, Validation Loss: -3.35\n",
+      "Epoch 173, Validation Loss: -3.37\n",
+      "Epoch 174, Validation Loss: -3.34\n",
+      "Epoch 175, Validation Loss: -3.28\n",
+      "Epoch 176, Validation Loss: -3.47\n",
+      "Early stopping at epoch 176\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 196.24 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bea83707-4bb4-40bf-a728-ff0244cee6ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 186.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    -3.470323               0.0      0.001771\n",
+      "std      0.231766               0.0      0.000690\n",
+      "min     -3.994723               0.0      0.000579\n",
+      "25%     -3.644735               0.0      0.001001\n",
+      "50%     -3.482617               0.0      0.002000\n",
+      "75%     -3.276845               0.0      0.002014\n",
+      "max     -2.852217               0.0      0.003521\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x_rnd\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_st_20-20.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea83707-4bb4-40bf-a728-ff0244cee6ab",
+   "id": "924a44a0-7a31-4774-8e89-39b9746d9d29",
    "metadata": {},
    "outputs": [],
    "source": []
