--- a/test/quadratic/Test Quadratic 5-5.ipynb
+++ b/test/quadratic/Test Quadratic 5-5.ipynb
@@ -1368,9 +1368,276 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59265e5b-ddd3-4fc1-95b5-bb5a7e1ceb3e",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aedc6ab6-9462-4f9f-8f6c-33573338f2bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "31ff366d-0622-47ca-9bb6-2f52ef320baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "66d0eb0b-4b0d-44d3-8ca0-df0ac89d3804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6574b91b-13b3-4308-89f4-b2666bf0c4af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 126.15\n",
+      "Epoch 1, Validation Loss: 15.12\n",
+      "Epoch 2, Validation Loss: 3.73\n",
+      "Epoch 3, Validation Loss: 3.14\n",
+      "Epoch 4, Validation Loss: 2.97\n",
+      "Epoch 5, Validation Loss: 2.83\n",
+      "Epoch 6, Validation Loss: 2.74\n",
+      "Epoch 7, Validation Loss: 2.74\n",
+      "Epoch 8, Validation Loss: 2.65\n",
+      "Epoch 9, Validation Loss: 2.55\n",
+      "Epoch 10, Validation Loss: 2.58\n",
+      "Epoch 11, Validation Loss: 2.44\n",
+      "Epoch 12, Validation Loss: 2.36\n",
+      "Epoch 13, Validation Loss: 2.13\n",
+      "Epoch 14, Validation Loss: 1.95\n",
+      "Epoch 15, Validation Loss: 1.83\n",
+      "Epoch 16, Validation Loss: 1.80\n",
+      "Epoch 17, Validation Loss: 1.72\n",
+      "Epoch 18, Validation Loss: 1.75\n",
+      "Epoch 19, Validation Loss: 1.79\n",
+      "Epoch 20, Validation Loss: 1.66\n",
+      "Epoch 21, Validation Loss: 1.65\n",
+      "Epoch 22, Validation Loss: 1.62\n",
+      "Epoch 23, Validation Loss: 1.61\n",
+      "Epoch 24, Validation Loss: 1.59\n",
+      "Epoch 25, Validation Loss: 1.61\n",
+      "Epoch 26, Validation Loss: 1.54\n",
+      "Epoch 27, Validation Loss: 1.57\n",
+      "Epoch 28, Validation Loss: 1.50\n",
+      "Epoch 29, Validation Loss: 1.54\n",
+      "Epoch 30, Validation Loss: 1.58\n",
+      "Epoch 31, Validation Loss: 1.64\n",
+      "Epoch 32, Validation Loss: 1.46\n",
+      "Epoch 33, Validation Loss: 1.45\n",
+      "Epoch 34, Validation Loss: 1.37\n",
+      "Epoch 35, Validation Loss: 1.40\n",
+      "Epoch 36, Validation Loss: 1.40\n",
+      "Epoch 37, Validation Loss: 1.33\n",
+      "Epoch 38, Validation Loss: 1.28\n",
+      "Epoch 39, Validation Loss: 1.28\n",
+      "Epoch 40, Validation Loss: 1.26\n",
+      "Epoch 41, Validation Loss: 1.24\n",
+      "Epoch 42, Validation Loss: 1.21\n",
+      "Epoch 43, Validation Loss: 1.27\n",
+      "Epoch 44, Validation Loss: 1.15\n",
+      "Epoch 45, Validation Loss: 1.18\n",
+      "Epoch 46, Validation Loss: 1.23\n",
+      "Epoch 47, Validation Loss: 1.14\n",
+      "Epoch 48, Validation Loss: 1.11\n",
+      "Epoch 49, Validation Loss: 1.12\n",
+      "Epoch 50, Validation Loss: 1.16\n",
+      "Epoch 51, Validation Loss: 1.14\n",
+      "Epoch 52, Validation Loss: 1.12\n",
+      "Epoch 53, Validation Loss: 1.16\n",
+      "Epoch 54, Validation Loss: 1.13\n",
+      "Epoch 55, Validation Loss: 1.11\n",
+      "Epoch 56, Validation Loss: 1.08\n",
+      "Epoch 57, Validation Loss: 1.15\n",
+      "Epoch 58, Validation Loss: 1.08\n",
+      "Epoch 59, Validation Loss: 1.14\n",
+      "Epoch 60, Validation Loss: 1.10\n",
+      "Epoch 61, Validation Loss: 1.11\n",
+      "Epoch 62, Validation Loss: 1.01\n",
+      "Epoch 63, Validation Loss: 1.15\n",
+      "Epoch 64, Validation Loss: 1.16\n",
+      "Epoch 65, Validation Loss: 1.18\n",
+      "Epoch 66, Validation Loss: 1.05\n",
+      "Epoch 67, Validation Loss: 1.06\n",
+      "Epoch 68, Validation Loss: 1.09\n",
+      "Epoch 69, Validation Loss: 1.14\n",
+      "Epoch 70, Validation Loss: 1.09\n",
+      "Epoch 71, Validation Loss: 1.10\n",
+      "Epoch 72, Validation Loss: 1.08\n",
+      "Epoch 73, Validation Loss: 1.05\n",
+      "Epoch 74, Validation Loss: 1.04\n",
+      "Epoch 75, Validation Loss: 1.07\n",
+      "Epoch 76, Validation Loss: 1.04\n",
+      "Epoch 77, Validation Loss: 1.02\n",
+      "Epoch 78, Validation Loss: 1.08\n",
+      "Epoch 79, Validation Loss: 1.15\n",
+      "Epoch 80, Validation Loss: 0.99\n",
+      "Epoch 81, Validation Loss: 1.02\n",
+      "Epoch 82, Validation Loss: 1.16\n",
+      "Epoch 83, Validation Loss: 1.10\n",
+      "Epoch 84, Validation Loss: 0.99\n",
+      "Epoch 85, Validation Loss: 1.07\n",
+      "Epoch 86, Validation Loss: 1.03\n",
+      "Epoch 87, Validation Loss: 1.09\n",
+      "Epoch 88, Validation Loss: 1.12\n",
+      "Epoch 89, Validation Loss: 1.06\n",
+      "Epoch 90, Validation Loss: 1.07\n",
+      "Epoch 91, Validation Loss: 1.06\n",
+      "Epoch 92, Validation Loss: 1.05\n",
+      "Epoch 93, Validation Loss: 1.10\n",
+      "Epoch 94, Validation Loss: 0.98\n",
+      "Epoch 95, Validation Loss: 0.97\n",
+      "Epoch 96, Validation Loss: 1.07\n",
+      "Epoch 97, Validation Loss: 1.04\n",
+      "Epoch 98, Validation Loss: 1.07\n",
+      "Epoch 99, Validation Loss: 1.09\n",
+      "Epoch 100, Validation Loss: 1.13\n",
+      "Epoch 101, Validation Loss: 1.04\n",
+      "Epoch 102, Validation Loss: 1.05\n",
+      "Epoch 103, Validation Loss: 1.11\n",
+      "Epoch 104, Validation Loss: 1.09\n",
+      "Epoch 105, Validation Loss: 1.11\n",
+      "Epoch 106, Validation Loss: 1.08\n",
+      "Epoch 107, Validation Loss: 0.98\n",
+      "Epoch 108, Validation Loss: 1.00\n",
+      "Epoch 109, Validation Loss: 1.07\n",
+      "Epoch 110, Validation Loss: 1.03\n",
+      "Epoch 111, Validation Loss: 1.02\n",
+      "Epoch 112, Validation Loss: 1.00\n",
+      "Epoch 113, Validation Loss: 1.03\n",
+      "Epoch 114, Validation Loss: 1.11\n",
+      "Early stopping at epoch 114\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 113.27 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc7574b4-a329-4ed7-8aac-77ac564aa3e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 422.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean     0.941449               0.0      0.001447\n",
+      "std      0.806486               0.0      0.000615\n",
+      "min     -0.325717               0.0      0.000000\n",
+      "25%      0.334421               0.0      0.001000\n",
+      "50%      0.777322               0.0      0.001074\n",
+      "75%      1.424293               0.0      0.002000\n",
+      "max      3.539785               0.0      0.003507\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x_rnd\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_st_5-5.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66d0eb0b-4b0d-44d3-8ca0-df0ac89d3804",
+   "id": "be91aeb5-b802-48a6-9e0b-e9b2b376b360",
    "metadata": {},
    "outputs": [],
    "source": []
