--- a/test/quadratic/Test Quadratic 200-200.ipynb
+++ b/test/quadratic/Test Quadratic 200-200.ipynb
@@ -1163,9 +1163,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "954a735a-56ec-4761-8d6c-5a94e7126ca2",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "900ed742-8ddb-4157-8aa2-26e9a8044f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4f6dca7f-2a38-485c-ac8e-673c5bb4e9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c79f85f4-c582-41b6-8943-a9d1096011b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "de36e61c-bc0e-4b80-ba43-e3de5ac021dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 5004.20\n",
+      "Epoch 1, Validation Loss: 240.90\n",
+      "Epoch 2, Validation Loss: 6.62\n",
+      "Epoch 3, Validation Loss: -0.59\n",
+      "Epoch 4, Validation Loss: -7.12\n",
+      "Epoch 5, Validation Loss: -12.77\n",
+      "Epoch 6, Validation Loss: -16.38\n",
+      "Epoch 7, Validation Loss: -19.77\n",
+      "Epoch 8, Validation Loss: -20.77\n",
+      "Epoch 9, Validation Loss: -21.48\n",
+      "Epoch 10, Validation Loss: -22.44\n",
+      "Epoch 11, Validation Loss: -23.62\n",
+      "Epoch 12, Validation Loss: -22.95\n",
+      "Epoch 13, Validation Loss: -24.06\n",
+      "Epoch 14, Validation Loss: -24.20\n",
+      "Epoch 15, Validation Loss: -24.51\n",
+      "Epoch 16, Validation Loss: -24.20\n",
+      "Epoch 17, Validation Loss: -25.13\n",
+      "Epoch 18, Validation Loss: -23.85\n",
+      "Epoch 19, Validation Loss: -24.36\n",
+      "Epoch 20, Validation Loss: -24.31\n",
+      "Epoch 21, Validation Loss: -24.59\n",
+      "Epoch 22, Validation Loss: -24.85\n",
+      "Epoch 23, Validation Loss: -24.17\n",
+      "Epoch 24, Validation Loss: -25.26\n",
+      "Epoch 25, Validation Loss: -25.18\n",
+      "Epoch 26, Validation Loss: -24.44\n",
+      "Epoch 27, Validation Loss: -24.62\n",
+      "Epoch 28, Validation Loss: -25.29\n",
+      "Epoch 29, Validation Loss: -25.61\n",
+      "Epoch 30, Validation Loss: -24.27\n",
+      "Epoch 31, Validation Loss: -24.79\n",
+      "Epoch 32, Validation Loss: -24.39\n",
+      "Epoch 33, Validation Loss: -24.27\n",
+      "Epoch 34, Validation Loss: -25.63\n",
+      "Epoch 35, Validation Loss: -24.26\n",
+      "Epoch 36, Validation Loss: -25.59\n",
+      "Epoch 37, Validation Loss: -25.47\n",
+      "Epoch 38, Validation Loss: -24.68\n",
+      "Epoch 39, Validation Loss: -24.58\n",
+      "Epoch 40, Validation Loss: -24.72\n",
+      "Epoch 41, Validation Loss: -24.58\n",
+      "Epoch 42, Validation Loss: -24.99\n",
+      "Epoch 43, Validation Loss: -24.61\n",
+      "Epoch 44, Validation Loss: -24.03\n",
+      "Epoch 45, Validation Loss: -24.59\n",
+      "Epoch 46, Validation Loss: -24.99\n",
+      "Epoch 47, Validation Loss: -25.00\n",
+      "Epoch 48, Validation Loss: -24.61\n",
+      "Epoch 49, Validation Loss: -24.87\n",
+      "Epoch 50, Validation Loss: -25.32\n",
+      "Epoch 51, Validation Loss: -24.98\n",
+      "Epoch 52, Validation Loss: -24.37\n",
+      "Epoch 53, Validation Loss: -25.52\n",
+      "Early stopping at epoch 53\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 61.79 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "55a33e59-3912-4d88-adc5-c5fec498d033",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean   -25.643881               0.0      0.001993\n",
+      "std      0.538048               0.0      0.001139\n",
+      "min    -26.891596               0.0      0.000989\n",
+      "25%    -25.834549               0.0      0.001423\n",
+      "50%    -25.665802               0.0      0.002002\n",
+      "75%    -25.486212               0.0      0.002324\n",
+      "max    -23.620269               0.0      0.011605\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x_rnd\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_st_200-200.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ef73c6-6097-47e8-9a38-aeff1a97d014",
+   "id": "bc645285-6f8b-435a-88f0-b4224f0ee0a9",
    "metadata": {},
    "outputs": [],
    "source": []
