--- a/test/quadratic/Test Quadratic 50-50.ipynb
+++ b/test/quadratic/Test Quadratic 50-50.ipynb
@@ -1178,9 +1178,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca144c07-b87e-41e8-a73b-1569d4d208ad",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8c129f27-568d-4cd5-bd38-1ab8814cf21d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2d4c237c-ef94-410d-b476-4d8ca285d1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2a4ddf7d-0d62-477a-bbff-308207d224e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8f794c7c-80e6-4194-9b49-42af309de26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 1241.19\n",
+      "Epoch 1, Validation Loss: 15.54\n",
+      "Epoch 2, Validation Loss: -0.70\n",
+      "Epoch 3, Validation Loss: -3.47\n",
+      "Epoch 4, Validation Loss: -6.03\n",
+      "Epoch 5, Validation Loss: -8.40\n",
+      "Epoch 6, Validation Loss: -10.00\n",
+      "Epoch 7, Validation Loss: -10.46\n",
+      "Epoch 8, Validation Loss: -10.59\n",
+      "Epoch 9, Validation Loss: -11.02\n",
+      "Epoch 10, Validation Loss: -11.19\n",
+      "Epoch 11, Validation Loss: -10.88\n",
+      "Epoch 12, Validation Loss: -11.29\n",
+      "Epoch 13, Validation Loss: -11.07\n",
+      "Epoch 14, Validation Loss: -10.93\n",
+      "Epoch 15, Validation Loss: -11.12\n",
+      "Epoch 16, Validation Loss: -11.04\n",
+      "Epoch 17, Validation Loss: -11.37\n",
+      "Epoch 18, Validation Loss: -11.15\n",
+      "Epoch 19, Validation Loss: -11.41\n",
+      "Epoch 20, Validation Loss: -11.20\n",
+      "Epoch 21, Validation Loss: -11.18\n",
+      "Epoch 22, Validation Loss: -11.16\n",
+      "Epoch 23, Validation Loss: -11.30\n",
+      "Epoch 24, Validation Loss: -10.98\n",
+      "Epoch 25, Validation Loss: -11.23\n",
+      "Epoch 26, Validation Loss: -11.13\n",
+      "Epoch 27, Validation Loss: -11.33\n",
+      "Epoch 28, Validation Loss: -11.43\n",
+      "Epoch 29, Validation Loss: -11.27\n",
+      "Epoch 30, Validation Loss: -11.45\n",
+      "Epoch 31, Validation Loss: -11.33\n",
+      "Epoch 32, Validation Loss: -11.39\n",
+      "Epoch 33, Validation Loss: -11.35\n",
+      "Epoch 34, Validation Loss: -11.40\n",
+      "Epoch 35, Validation Loss: -10.89\n",
+      "Epoch 36, Validation Loss: -11.49\n",
+      "Epoch 37, Validation Loss: -11.09\n",
+      "Epoch 38, Validation Loss: -11.38\n",
+      "Epoch 39, Validation Loss: -11.19\n",
+      "Epoch 40, Validation Loss: -11.27\n",
+      "Epoch 41, Validation Loss: -11.45\n",
+      "Epoch 42, Validation Loss: -11.56\n",
+      "Epoch 43, Validation Loss: -11.43\n",
+      "Epoch 44, Validation Loss: -10.84\n",
+      "Epoch 45, Validation Loss: -11.43\n",
+      "Epoch 46, Validation Loss: -11.30\n",
+      "Epoch 47, Validation Loss: -11.11\n",
+      "Epoch 48, Validation Loss: -11.21\n",
+      "Epoch 49, Validation Loss: -11.52\n",
+      "Epoch 50, Validation Loss: -11.47\n",
+      "Epoch 51, Validation Loss: -11.24\n",
+      "Epoch 52, Validation Loss: -11.31\n",
+      "Epoch 53, Validation Loss: -11.60\n",
+      "Epoch 54, Validation Loss: -11.36\n",
+      "Epoch 55, Validation Loss: -11.18\n",
+      "Epoch 56, Validation Loss: -11.36\n",
+      "Epoch 57, Validation Loss: -11.30\n",
+      "Epoch 58, Validation Loss: -11.11\n",
+      "Epoch 59, Validation Loss: -11.29\n",
+      "Epoch 60, Validation Loss: -11.51\n",
+      "Epoch 61, Validation Loss: -11.13\n",
+      "Epoch 62, Validation Loss: -11.42\n",
+      "Epoch 63, Validation Loss: -11.11\n",
+      "Epoch 64, Validation Loss: -11.30\n",
+      "Epoch 65, Validation Loss: -11.13\n",
+      "Epoch 66, Validation Loss: -11.54\n",
+      "Epoch 67, Validation Loss: -11.32\n",
+      "Epoch 68, Validation Loss: -11.28\n",
+      "Epoch 69, Validation Loss: -11.51\n",
+      "Epoch 70, Validation Loss: -11.29\n",
+      "Epoch 71, Validation Loss: -11.08\n",
+      "Epoch 72, Validation Loss: -11.23\n",
+      "Early stopping at epoch 72\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 72.02 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1dfa0cb8-007e-416d-8a84-2b3db9b6d2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 83.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean   -11.590972               0.0      0.001614\n",
+      "std      0.211622               0.0      0.000582\n",
+      "min    -12.038650               0.0      0.000507\n",
+      "25%    -11.717447               0.0      0.001000\n",
+      "50%    -11.573873               0.0      0.001899\n",
+      "75%    -11.495413               0.0      0.002002\n",
+      "max    -10.919685               0.0      0.003289\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x_rnd\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_st_50-50.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6aecbf-3af1-48bb-8086-abfc3b14e04e",
+   "id": "2791c3c0-48c8-4e61-ab7f-10a2a0330b2d",
    "metadata": {},
    "outputs": [],
    "source": []
