--- a/test/quadratic/Test Quadratic 500-500.ipynb
+++ b/test/quadratic/Test Quadratic 500-500.ipynb
@@ -1223,6 +1223,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3f5f4d5-c270-4a18-832b-e41bee40681d",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bddd708c-332f-4d0e-afd7-e13622fb6847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "10324943-e343-4b04-bdd9-b31e9d3ef70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "42aecba7-e28a-4fde-a945-6cd0c8e8d307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f51be779-262a-44ec-b013-86caab615f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 12499.07\n",
+      "Epoch 1, Validation Loss: 1784.93\n",
+      "Epoch 2, Validation Loss: 23.64\n",
+      "Epoch 3, Validation Loss: 5.83\n",
+      "Epoch 4, Validation Loss: -6.93\n",
+      "Epoch 5, Validation Loss: -16.85\n",
+      "Epoch 6, Validation Loss: -26.62\n",
+      "Epoch 7, Validation Loss: -33.85\n",
+      "Epoch 8, Validation Loss: -38.44\n",
+      "Epoch 9, Validation Loss: -43.11\n",
+      "Epoch 10, Validation Loss: -45.13\n",
+      "Epoch 11, Validation Loss: -47.39\n",
+      "Epoch 12, Validation Loss: -48.66\n",
+      "Epoch 13, Validation Loss: -49.37\n",
+      "Epoch 14, Validation Loss: -50.28\n",
+      "Epoch 15, Validation Loss: -51.22\n",
+      "Epoch 16, Validation Loss: -52.48\n",
+      "Epoch 17, Validation Loss: -52.41\n",
+      "Epoch 18, Validation Loss: -52.47\n",
+      "Epoch 19, Validation Loss: -54.53\n",
+      "Epoch 20, Validation Loss: -54.88\n",
+      "Epoch 21, Validation Loss: -54.20\n",
+      "Epoch 22, Validation Loss: -55.63\n",
+      "Epoch 23, Validation Loss: -55.99\n",
+      "Epoch 24, Validation Loss: -54.68\n",
+      "Epoch 25, Validation Loss: -54.76\n",
+      "Epoch 26, Validation Loss: -55.40\n",
+      "Epoch 27, Validation Loss: -54.58\n",
+      "Epoch 28, Validation Loss: -55.51\n",
+      "Epoch 29, Validation Loss: -53.97\n",
+      "Epoch 30, Validation Loss: -54.32\n",
+      "Epoch 31, Validation Loss: -56.51\n",
+      "Epoch 32, Validation Loss: -55.65\n",
+      "Epoch 33, Validation Loss: -56.19\n",
+      "Epoch 34, Validation Loss: -55.39\n",
+      "Epoch 35, Validation Loss: -56.41\n",
+      "Epoch 36, Validation Loss: -56.57\n",
+      "Epoch 37, Validation Loss: -56.81\n",
+      "Epoch 38, Validation Loss: -57.13\n",
+      "Epoch 39, Validation Loss: -55.95\n",
+      "Epoch 40, Validation Loss: -56.59\n",
+      "Epoch 41, Validation Loss: -54.86\n",
+      "Epoch 42, Validation Loss: -55.40\n",
+      "Epoch 43, Validation Loss: -55.95\n",
+      "Epoch 44, Validation Loss: -56.41\n",
+      "Epoch 45, Validation Loss: -55.73\n",
+      "Epoch 46, Validation Loss: -56.41\n",
+      "Epoch 47, Validation Loss: -56.95\n",
+      "Epoch 48, Validation Loss: -56.79\n",
+      "Epoch 49, Validation Loss: -54.07\n",
+      "Epoch 50, Validation Loss: -57.47\n",
+      "Epoch 51, Validation Loss: -56.26\n",
+      "Epoch 52, Validation Loss: -56.81\n",
+      "Epoch 53, Validation Loss: -56.89\n",
+      "Epoch 54, Validation Loss: -55.37\n",
+      "Epoch 55, Validation Loss: -55.24\n",
+      "Epoch 56, Validation Loss: -55.85\n",
+      "Epoch 57, Validation Loss: -56.14\n",
+      "Epoch 58, Validation Loss: -56.15\n",
+      "Epoch 59, Validation Loss: -56.54\n",
+      "Epoch 60, Validation Loss: -56.62\n",
+      "Epoch 61, Validation Loss: -57.69\n",
+      "Epoch 62, Validation Loss: -56.32\n",
+      "Epoch 63, Validation Loss: -57.03\n",
+      "Epoch 64, Validation Loss: -56.93\n",
+      "Epoch 65, Validation Loss: -56.77\n",
+      "Epoch 66, Validation Loss: -56.71\n",
+      "Epoch 67, Validation Loss: -57.42\n",
+      "Epoch 68, Validation Loss: -54.92\n",
+      "Epoch 69, Validation Loss: -57.02\n",
+      "Epoch 70, Validation Loss: -56.23\n",
+      "Epoch 71, Validation Loss: -56.95\n",
+      "Epoch 72, Validation Loss: -56.69\n",
+      "Epoch 73, Validation Loss: -57.11\n",
+      "Epoch 74, Validation Loss: -55.86\n",
+      "Epoch 75, Validation Loss: -55.25\n",
+      "Epoch 76, Validation Loss: -56.06\n",
+      "Epoch 77, Validation Loss: -57.31\n",
+      "Epoch 78, Validation Loss: -56.49\n",
+      "Epoch 79, Validation Loss: -56.45\n",
+      "Epoch 80, Validation Loss: -56.21\n",
+      "Early stopping at epoch 80\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 89.76 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "243b38ef-1136-4c08-b184-dfdf51bcd27a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:12<00:00,  1.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean   -57.662236               0.0      0.002313\n",
+      "std      0.236788               0.0      0.000996\n",
+      "min    -58.457726               0.0      0.000995\n",
+      "25%    -57.828536               0.0      0.001998\n",
+      "50%    -57.625359               0.0      0.002009\n",
+      "75%    -57.476901               0.0      0.002545\n",
+      "max    -57.278005               0.0      0.008715\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x_rnd\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/cq_st_500-500.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b853a2f9-dc1c-4a09-b247-c44bd39a93fc",
